# CortenForge

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  recorder_migration_plan.md  refactor_targets.md
.cargo/: config.toml
.github/workflows/: mdbook.yml
apps/colon_sim/: Cargo.toml
capture_utils/: Cargo.toml  README.md
contributor/: 404.html  apps.html  apps_index.html  architecture.html  ci.html  core_crates.html  hooks.html  intro.html  migration.html  overview.html  print.html  publishing.html  roadmap.html  searchindex.js  searchindex.json  testing.html  tools.html
crates/burn_dataset/: Cargo.toml
crates/cli_support/: Cargo.toml
crates/colon_sim/: Cargo.toml
crates/cortenforge/: Cargo.toml
crates/hello_substrate/: Cargo.toml
data_contracts/: Cargo.toml  README.md
docs/: book.toml  burn_architecture.md  cli.md  train_harness_plan.md  training.md  weak_points.md
docs/book/: SUMMARY.md
docs/book/data_capture/: README.md  datagen.md  manual_capture.md
docs/book/inference/: realtime.md
docs/book/ingestion_etl/: commands_debugging.md
docs/book/overview/: README.md
docs/contributor_book/: book.toml
docs/src/: CONTROLS.md  SUMMARY.md  burn_dataset.md  burn_patch.md  cli.md  data_ingestion.md  data_schema.md  streaming_shards.md  tensor_warehouse.md  training.md  tui.md
docs/user_book/: book.toml
inference/: Cargo.toml
models/: Cargo.toml
scripts/windows/: train_hp.ps1
sim_core/: Cargo.toml  README.md
src/: autopilot.rs  balloon_control.rs  burn_model.rs  cli.rs  common_cli.rs  hud.rs  lib.rs  main.rs  probe.rs  service.rs  tunnel.rs  vision.rs
src/sim/: recorder.rs
src/tools/: burn_dataset.rs
src/vision/: mod.rs  vision_core.rs
tests/: vision_inference.rs  warehouse_store.rs
tools/: Cargo.toml
training/: Cargo.toml
user/: 404.html  capture.html  etl.html  faq.html  happy_path.html  index.html  inference.html  print.html  searchindex.js  searchindex.json  tools.html  training.html
vision_core/: Cargo.toml  README.md
vision_runtime/: Cargo.toml  README.md
(+18 files in other folders)
