[workspace]
members = [
    "crates/colon_sim",
    "crates/cli_support",
    "crates/cortenforge",
    "crates/burn_dataset",
    "crates/hello_substrate",
    "tools",
    "capture_utils",
    "sim_core",
    "vision_core",
    "vision_runtime",
    "data_contracts",
    "training",
    "inference",
    "models",
    "apps/colon_sim",
]
resolver = "2"

[patch.crates-io]
burn-core = { path = "vendor/burn-core-0.14.0" }
